# vidaa-control

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
custom_components/vidaa_tv/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  media_player.py  remote.py  repairs.py
custom_components/vidaa_tv/translations/: en.json
docs/: PROTOCOL.md
vidaa/: __init__.py  async_client.py  cli.py  client.py  credentials.py  discovery.py  keys.py  protocol.py  topics.py  wol.py
vidaa/certs/: vidaa_client.key  vidaa_client.pem
vidaa/config/: __init__.py  constants.py  loader.py  schema.py  storage.py
vidaa2mqtt/: __init__.py  __main__.py  bridge.py  config.py  discovery.py
